# elqm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  pytest.yml
configs/: pytest.yaml
configs/embeddings/: 256_10_nlc_bge.yaml  256_10_nlc_g4a.yaml
configs/enrich/: 256_10_nlc_bge_fn_enrich.yaml  256_10_nlc_bge_fn_mistral_enrich.yaml
configs/footnote_resolution/: 256_10_nlc_bge_fn.yaml  256_10_nlc_g4a_fn.yaml
configs/models/: 256_10_nlc_bge_fn_gemma.yaml  256_10_nlc_bge_fn_mistral.yaml  256_10_nlc_bge_fn_mixtral.yaml  256_10_nlc_bge_fn_orca2.yaml  256_10_nlc_bge_fn_phi.yaml  256_10_nlc_bge_mistral.yaml
configs/no_citation/: 256_10_bge.yaml  256_10_g4a.yaml
configs/prompts/: 256_5_5_nlc_bge_fn_mistral_h1.yaml  256_5_5_nlc_bge_fn_mistral_h2.yaml  256_5_5_nlc_bge_fn_mistral_hc1.yaml  256_5_5_nlc_bge_fn_mistral_hc2.yaml  256_5_5_nlc_bge_fn_mistral_s1.yaml  256_5_5_nlc_bge_fn_mistral_s2.yaml
configs/retrievers/: 256_10_10_nlc_bge_fn_mistral.yaml  256_5_5_nlc_bge_fn.yaml  256_5_5_nlc_bge_fn_mistral_hc3.yaml  256_5_5_nlc_bge_mistral.yaml  256_bm_10_nlc_bge_fn_mistral.yaml
configs/self-query/: 256_10_nlc_bge_fn_sq.yaml
configs/split_size_vs_k_retrieved/: 1024_10_nlc_bge.yaml  1024_1_nlc_bge.yaml  1024_5_nlc_bge.yaml  256_10_nlc_bge.yaml  256_1_nlc_bge.yaml  (+4 more)
experimental/: compare_different_chains.ipynb  final_pipeline_design_test.ipynb  lancghain.ipynb
notebooks/: analysis.ipynb  demo.ipynb  evaluation.ipynb  test_results.ipynb
tests/: test_scraper.py  test_utils.py
(+218 files in other folders)
