[project]
name = "elqm"
description = "Energy Law Query Master"
authors = [
    {name = "Paul Saegert"},
    {name = "Nikita Tatsch"},
    {name = "Daniel Knorr"}
    ]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dynamic = ["dependencies"]
version = "1.0.0"
urls = { Github = "https://github.com/psaegert/elqm"}

[project.scripts]
elqm = "elqm.__main__:main"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
dev = [
    "requests",
    "beautifulsoup4",
    "tqdm",
    "pandas",
    "datasets",
    "huggingface_hub",
    "pre-commit",
    "requests",
    "types-requests",
    "types-toml",
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "toml",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "platformdirs==3.10.0",
]
build-backend = "setuptools.build_meta"


[tool.flake8]
ignore = ["E501"]
exclude = [
    ".git",
	"__pycache__",
	"documentation",
	"build",
	"venv",
	".venv",
	"env",
	".env",
	"images",
]


[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = ".venv"
ignore_missing_imports = true

[tool.isort]
multi_line_output = 2
line_length = 500